kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payable
  name: payable
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: payable
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payable
  name: payable

spec:
  replicas: 1
  selector:
    matchLabels:
      app: payable
  template:
    metadata:
      labels:
        app: payable
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: docker
        - name: TZ
          value: Europe/Zurich
        image: canaweb/payable:latest
        imagePullPolicy: IfNotPresent
        name: payable
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "350Mi"
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: receivable
  name: receivable
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: receivable
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: receivable
  name: receivable

spec:
  replicas: 1
  selector:
    matchLabels:
      app: receivable
  template:
    metadata:
      labels:
        app: receivable
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: TZ
              value: Europe/Zurich
          image: canaweb/receivable:latest
          imagePullPolicy: IfNotPresent
          name: receivable
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "350Mi"
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ng-ui
  name: ng-ui
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: ng-ui
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ng-ui
  name: ng-ui

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ng-ui
  template:
    metadata:
      labels:
        app: ng-ui
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Zurich
          image: canaweb/ng-ui:latest
          imagePullPolicy: IfNotPresent
          name: ng-ui
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "350Mi"
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: field
  name: field
spec:
  ports:
    - name: "http"
      port: 8080
      targetPort: 8080
  selector:
    app: field
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: field
  name: field

spec:
  replicas: 1
  selector:
    matchLabels:
      app: field
  template:
    metadata:
      labels:
        app: field
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: TZ
              value: Europe/Zurich
          image: canaweb/field:latest
          imagePullPolicy: IfNotPresent
          name: field
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "350Mi"
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: mongodb
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          imagePullPolicy: IfNotPresent
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
      - localhost
      secretName: "localhost-cert"
  rules:
    - host: localhost
      http:
        paths:
          - path: /field(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: field
                port:
                  number: 8080
          - path: /payable(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: payable
                port:
                  number: 8080
          - path: /receivable(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: receivable
                port:
                  number: 8080
          - path: /ui(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: ng-ui
                port:
                  number: 80
  ingressClassName: nginx

---


apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
